do not call KJob::emitResult() when the job is about to be killed

KJob will call emitResult() itself if it is needed, calling it twice may lead
to crashes.

BUG:294399
FIXED-IN:14.12